--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "certbot": "^5.0.3",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "jimp": "^0.22.10",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.3",
     "react": "^17.0.2",
