--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "axios": "^0.26.1",
+    "browser": "^0.2.6",
     "certbot": "^5.0.3",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jimp": "^0.22.10",
+    "lorem-ipsum": "^2.0.8",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.0",
+    "request": "^2.88.2",
     "tailwind": "^4.0.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
