--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "browser": "^0.2.6",
     "certbot": "^5.0.3",
+    "generate-password-browser": "^1.1.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jimp": "^0.22.10",
