--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "browser": "^0.2.6",
     "certbot": "^5.0.3",
+    "exchange-rates-api": "^1.1.0",
     "generate-password-browser": "^1.1.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
@@ -19,6 +20,8 @@
     "nanoid": "^5.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^5.0.4",
+    "react-image-crop": "^11.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.0",
     "request": "^2.88.2",
